Migrate to Firestore direct access - remove GAS dependency
- Add Firebase SDK to MOAP interface
- New api-firestore.js with direct Firestore calls
- Auto-seed species, classes, vocations on first load
- Firestore security rules for test mode
- Anonymous authentication enabled
- No more CORS issues or quota limits!

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,8 @@
 {
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "Firebase/firestore.indexes.json"
+  },
   "hosting": {
     "public": "MOAP Interface",
     "ignore": [
