Implement Feudalism 4 Consumables System
- Add admin UI for consumables management (create, edit, delete, toggle disable)
- Add Consume button to HUD inventory menu for consumable items
- Implement requestConsumeItem() in HUD Bridge (LSL)
- Create Cloud Function to process consume requests with validation
- Add Buffs display panel to HUD with real-time updates
- Update Firestore rules for consumables collections
- Add functions directory with Cloud Function for consume processing

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,9 @@
     "rules": "firestore.rules",
     "indexes": "Firebase/firestore.indexes.json"
   },
+  "functions": {
+    "source": "functions"
+  },
   "hosting": {
     "public": "MOAP Interface",
     "ignore": [
